--- a/templates/create.html
+++ b/templates/create.html
@@ -16,5 +16,7 @@
         <input type="text" name="email" id="email">
         <button>Submit</button>
     </form>
+
+    <a href="/">Home</a>
 </body>
 </html>
