--- a/templates/read_all.html
+++ b/templates/read_all.html
@@ -7,9 +7,44 @@
 </head>
 <body>
     <h1>All Users</h1>
-    {% for one_user in all_users%}
-        <p>Name: {{one_user.first_name}} {{one_user.last_name}} Email: {{one_user.email}} </p>
-    {%endfor%}
+
+    <table>
+        <tr>
+            <th>ID</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+            <th>Actions</th>
+        </tr>
+        <tr>
+            <td>
+                {% for one_user in all_users%}
+                <p>{{one_user.id}}</p>
+                {%endfor%}
+            </td>
+            <td>
+                {% for one_user in all_users%}
+                <p>{{one_user.first_name}}</p>
+                {%endfor%}
+            </td>
+            <td>
+                {% for one_user in all_users%}
+                <p>{{one_user.last_name}}</p>
+                {%endfor%}
+            </td>
+            <td>
+                {% for one_user in all_users%}
+                <p>{{one_user.email}}</p>
+                {%endfor%}
+            </td>
+            <td>
+                {% for one_user in all_users%}
+                <p><a href="/show/{{one_user.id}}">Show</a> | <a href="/edit/{{one_user.id}}">Edit</a> | <a href="/delete/{{one_user.id}}">Delete</a></p>
+                {%endfor%}
+            </td>
+        </tr>
+
+    </table>
 
     <a href="/new">Add User</a>
 </body>
